HTML pages render with theme.

--- a/welcome.html
+++ b/welcome.html
@@ -1,10 +1,8 @@
 ---
-layout: post
-title: Blogging Like a Hacker
+layout: page
+title: Welcome to Netscape!
+permalink: welcome.html
 ---
-
-<TITLE>Welcome to Netscape!</TITLE>
-<BASEFONT SIZE=3>
 
 <IMG SRC="images/tiles.gif" WIDTH=472 HEIGHT=137><P>
 
