--- a/whats-new.html
+++ b/whats-new.html
@@ -1,7 +1,8 @@
-<TITLE>What's New!</TITLE>
-<BASEFONT SIZE=3>
-
-
+---
+layout: page
+title: What's new!
+permalink: whats-new.html
+---
 <IMG SRC="images/moznew.gif" WIDTH=472 HEIGHT=137> <P>
 
 <B>
