--- a/whats-new.html
+++ b/whats-new.html
@@ -3,12 +3,8 @@ layout: page
 title: What's new!
 permalink: whats-new.html
 ---
-<IMG SRC="images/moznew.gif" WIDTH=472 HEIGHT=137> <P>
-
-<B>
-<FONT SIZE=+3>W</FONT><FONT SIZE=+2>hat's</FONT>
-<FONT SIZE=+3>N</FONT><FONT SIZE=+2>ew!</FONT>
-</B><P>
+<IMG SRC="img/moznew.gif" WIDTH="472" HEIGHT="137">
+<P>
 
 New information is available every day on the Internet -- how do you find out
 about it?  One way is to start here.  This is a monthly What's New listing
